- Added the reset to CW default columns (accessible from the folder columns picker menu).
- Added the save current folder columns as CW default option (accessible from the folder columns picker menu).
- Added the settings panel to set the default columns for new folder.
- Added the settings panel to add/delete/edit custom columns.
-
==========
Version 4.0 - 04/07/2014
- Added the "Info" tab.
- Embedded addon icon.
- Added bcc custom column.
- Added reply-to custom column.
- Added the x-original-from custom column (See DMARC specification http://www.dmarc.org/).
- Added the content-base custom column.
- Fixed a bug in resizing custom columns.
==========
Version 3.1 - 22/02/2014
- Added the option to show the "Recipient" column in the conversation tab.
- Added chinese translation (zh-CN), thanks yfdyh000 (from BabelZilla.org).
- Added serbian translation (sr), thanks DakSrbija (from BabelZilla.org).
- Added dutch translation (nl), thanks markh (from BabelZilla.org).
==========
Version 3.0.1 - 01/01/2014
- Added background color and border to the Custom Columns tab warning message.
==========
Version 3.0 - 30/12/2013
- It's now possible to show custom columns. The first one shows the mail cc header.
- Added french translation (fr), thanks Goofy (from BabelZilla.org).
- Added russian translation (ru), thanks Salted (from BabelZilla.org).
==========
Version 2.1.4 - 22/12/2013
- If a column is removed from one conversation tab, it's not more added if switched again to that tab.
==========
Version 2.1.3 - 22/12/2013
- Internal release.
==========
Version 2.1.2 - 21/12/2013
- Minor bug fixing.
==========
Version 2.1.1 - 21/12/2013
- Internal release.
==========
Version 2.1 - 21/12/2013
- Internal release.
- Changed name to "ColumnsWizard" (previous was ColumnCV).
- Added german translation (de), thanks Axel Grude.
==========
Version 2.0 (as ColumnCV) - 18/12/2013
- Added a preferences panel.