@@ -17,3 +17,5 @@ ColumnsWizardNFCols.up=Up
 ColumnsWizardNFCols.down=Down
 ColumnsWizardNFCols.resetMenu=Reset columns to CW default
 ColumnsWizardNFCols.saveDefault=Save columns as CW default
+ColumnsWizardxspamscore.label=X-Spam-Score
+ColumnsWizardxspamscoreDesc.label=Click to sort by X-Spam-Score
