@@ -17,3 +17,5 @@ ColumnsWizardNFCols.up=Su
 ColumnsWizardNFCols.down=Giù
 ColumnsWizardNFCols.resetMenu=Ripristina le colonne predefinite CW
 ColumnsWizardNFCols.saveDefault=Salva le colonne come predefinite CW
+ColumnsWizardxspamscorebase.label=X-Spam-Score
+ColumnsWizardxspamscoreDesc.label=Clicca qui per ordinare per il campo X-Spam-Score
